yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipe-api
  labels:
    app: recipe-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recipe-api
  template:
    metadata:
      labels:
        app: recipe-api
    spec:
      containers:
        - name: recipe-api
          image: carlosalvgom/recipes-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "6Gi"
              cpu: "1000m"
            limits:
              memory: "6Gi"
              cpu: "1500m"
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 120
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 120
            periodSeconds: 20
