yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recipe-api
spec:
  selector:
    app: recipe-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
